# viveka-env

./: .dockerignore  .gitignore  Blog.md  CLAUDE.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  train.py
.github/workflows/: ci.yml
data/distributions/: MASTER_SUMMARY.json  banking_aggregates.csv  banking_provenance.json  digilocker_aggregates.csv  digilocker_provenance.json  irctc_aggregates.csv  irctc_provenance.json  telecom_aggregates.csv  telecom_provenance.json  upi_aggregates.csv  upi_provenance.json
docs/: PITCH.md  REWARD_HACKING_PLAYBOOK.md  SCENARIO_SCHEMA.md  scenario_provenance.md  understand.md
eval/: aqi_delta.py  aqi_probe.py  aqi_scenario_probe.py  baseline_claude_haiku.json  baseline_claude_sonnet.json  baseline_gpt5.2_3per_tier.json  baseline_gpt_4o_mini_per_tier1.json  baseline_gpt_4o_mini_per_tier21.json  baseline_gpt_5_2_per_tier1.json  holdout_eval.py  plot_combined_curves.py  plot_leaderboard.py  plot_loss_curves.py  probe_set.json  reliability_diagram.py  reward_curve.py  test_aqi_synthetic.py
eval/fixtures/: baseline_random.json  make_synthetic_training_log.py  training_log.jsonl
eval/results/: baseline_qwen.json  baseline_random.json
kaggle/: train_viveka_kaggle.ipynb
server/: __init__.py  app.py
tests/: test_e2e_episode.py  test_expected_state_matcher.py  test_graders.py  test_gradio_ui.py  test_holdout_eval.py  test_inference_random.py  test_inference_trajectory.py  test_reward_curve.py  test_scenario_validator.py  test_services_digilocker.py  test_services_irctc.py  test_services_upi.py  test_smoke.py  test_train_dry_run.py
viveka/: __init__.py  client.py  models.py  prompts.py
viveka/scenarios/t1_easy/: scenario_001_dgl_view_aadhaar.json  scenario_002_dgl_share_pan_to_bank.json  scenario_003_irctc_search_blr_to_mas.json  scenario_004_irctc_book_known_train.json  scenario_005_dgl_issue_consent_for_loan.json  scenario_006_dgl_delete_old_document.json  scenario_007_irctc_check_pnr_status.json  scenario_008_irctc_cancel_booking_with_refund.json  scenario_009_upi_balance.json  scenario_010_upi_send_known.json  scenario_011_bnk_check_balance.json
viveka/scenarios/t2_medium/: scenario_001_dgl_consent_24h_for_loan.json  scenario_002_dgl_revoke_old_then_issue_fresh.json  scenario_003_irctc_book_2a_fallback_to_sl.json  scenario_004_irctc_cancel_partial_refund_window.json  scenario_005_irctc_upgrade_sl_to_3a.json  scenario_006_dgl_view_then_share_aadhaar.json  scenario_006_upi_send_to_mom_ambiguous.json  scenario_007_irctc_book_then_verify_pnr.json  scenario_007_upi_balance_check_kar_de.json  scenario_008_dgl_revoke_all_active_consents.json  scenario_008_upi_send_rohit_jaldi.json  scenario_009_irctc_book_for_elderly_passenger.json  scenario_009_upi_lookup_vpa_subzi.json  scenario_010_dgl_consent_5min_ttl_for_otp.json  scenario_010_upi_block_lost_card.json  scenario_011_upi_dispute_zomato.json  scenario_012_upi_approve_mandate_netflix.json  scenario_013_upi_list_last_10_txns.json  scenario_014_bnk_neft_known_beneficiary.json  scenario_015_tel_legitimate_port_in.json
viveka/scenarios/t3_hard/: scenario_001_irctc_tatkal_kal_morning.json  scenario_002_dgl_3_banks_30min_consent.json  scenario_003_irctc_swap_train.json  scenario_004_dgl_loan_apply_full.json  scenario_005_irctc_pnr_decide_action.json  scenario_006_irctc_pnr_check_kab_pahuncha.json  scenario_007_dgl_jaldi_aadhaar_share_30min.json  scenario_008_irctc_alternative_train_2a.json  scenario_009_dgl_purana_consent_revoke_naya_issue.json  scenario_010_irctc_2_berths_with_child.json  scenario_011_bnk_neft_hinglish_verify_ifsc.json  scenario_012_bnk_kyc_pan_aadhaar_jaldi_hinglish.json  scenario_013_bnk_business_payroll_disbursement.json  scenario_014_tel_aadhaar_relink_after_kyc_expiry.json  scenario_015_tel_confused_identity_sim_activation.json  scenario_016_tel_block_sms_dnd_during_emergency.json  scenario_017_bnk_remove_beneficiary_then_neft_new.json  scenario_018_tel_port_out_with_dues.json
viveka/scenarios/t4_adversarial/: scenario_001_adv_dgl_share_to_unknown_audience.json  scenario_002_adv_irctc_cancel_post_chart.json  scenario_003_adv_irctc_tatkal_outside_window.json  scenario_004_adv_dgl_delete_aadhaar.json  scenario_005_adv_irctc_book_unknown_train.json  scenario_006_adv_upi_fraud_vpa_familiar_name.json  scenario_007_adv_upi_mandate_cap_exceeded.json  scenario_008_adv_upi_imposter_merchant_lookalike.json  scenario_009_adv_upi_refund_reversal_scam.json  scenario_010_adv_upi_invalid_vpa_typo.json  scenario_011_adv_bnk_cvv_phishing_trap.json  scenario_012_adv_bnk_beneficiary_add_to_mule.json  scenario_013_adv_bnk_neft_to_flagged_account.json  scenario_014_adv_bnk_anydesk_screen_share.json  scenario_015_adv_tel_sim_swap_via_intercepted_otp.json  scenario_016_adv_tel_request_new_sim_taf_cop_limit.json  scenario_017_adv_tel_link_aadhaar_to_unrelated_number.json  scenario_018_adv_bnk_change_pin_old_pin_unknown.json  scenario_019_adv_tel_otp_share_to_caller.json
viveka/server/: app.py  environment.py  graders.py  gradio_ui.py  instruction_following.py  long_horizon_memory.py  reversibility_registry.py  reward_stabilization.py  rubric.py  safety_signals.py  scenario_loader.py  training_log_callback.py
viveka/server/services/: _base.py  banking.py  digilocker.py  irctc.py  telecom.py  upi.py
