[project]
name = "viveka-env"
version = "0.1.0"
description = "Viveka — an OpenEnv RL environment that teaches LLM agents to predict reversibility before acting and emit calibrated confidence on India's Digital Public Infrastructure (UPI + DigiLocker + IRCTC)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Pin openenv-core to 0.2.2 — 0.2.3 wheel imports CallToolResult from a
    # fastmcp path that doesn't exist in 3.2+ (PyPI release drift). 0.2.2
    # works with fastmcp 3.0–3.1.
    "openenv-core[core]==0.2.2",
    "fastmcp>=3.0,<3.2",
    # fastmcp 3.1 imports Annotations + Icon from mcp.types (added in mcp 1.10).
    "mcp>=1.10",
    "fastapi>=0.100.0",
    "pydantic>=2.0",
    "uvicorn>=0.20.0",
    "openai>=1.0",
    "gradio>=4.0",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
train = [
    "torch>=2.0",
    # GRPOConfig + GRPOTrainer were added in TRL 0.13. Newer TRL transitively
    # imports llm_blender (which is broken on transformers 4.45+) — train.py
    # stubs that out at the top of the file before TRL's lazy import fires,
    # so we can keep TRL at >=0.13 here.
    "trl>=0.13.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "datasets>=2.18.0",
    # mergekit dropped: caps pydantic <2.11 but fastmcp 3.1+ needs >=2.11.7.
    # TRL imports mergekit transitively but never uses it in the GRPO codepath;
    # train.py installs a stub module so the import chain succeeds without it.
    "huggingface-hub>=0.23.2",
]

[project.scripts]
viveka-server = "viveka.server.app:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["viveka*"]

[tool.setuptools.package-data]
"viveka.scenarios.t1_easy" = ["*.json"]
"viveka.scenarios.t2_medium" = ["*.json"]
"viveka.scenarios.t3_hard" = ["*.json"]
"viveka.scenarios.t4_adversarial" = ["*.json"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
